# monitor-eye

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: test_comen_monitor.py
monitor_eye/: __init__.py  connection.py  exceptions.py  finder.py  ocr.py  pytest_plugin.py  screen.py
monitor_eye.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitor_eye/mock/: __init__.py  renderer.py  vnc_server.py
tests/: conftest.py  test_connection.py  test_finder.py  test_integration.py  test_mock_renderer.py  test_mock_vnc.py  test_ocr.py  test_plugin.py  test_screen.py
