[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-eye"
version = "0.1.0"
description = "Pure Python GUI testing toolkit for patient monitors — a lightweight SikuliX alternative"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "vncdotool>=1.2.0",
    "opencv-python-headless>=4.8",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-html"]

[project.entry-points."pytest11"]
monitor_eye = "monitor_eye.pytest_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
